--- a/homeapp/static/homeapp/css/styles.css
+++ b/homeapp/static/homeapp/css/styles.css
@@ -496,7 +496,7 @@ body{
 }
 
 .partner {
-  max-width: 394px;
+  /* max-width: 394px; */
   background: rgb(42, 53, 84);
   padding: 24px;
   color: white;
@@ -684,18 +684,14 @@ body{
     align-items: flex-start;
   }
 
-  .footer-inner {
-    flex-direction: column;
-  }
   .footer .container{
     background-image: none;
   }
-  .footer-contacts{
-    flex-direction: column;
-  }
+
   nav .container{
     gap: 20px;
   }
+
   .navbar-toggler:focus{
     
   }
@@ -705,6 +701,29 @@ body{
   }
   .features__container{
     background: white ;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .footer-inner {
+    flex-direction: column;
+    align-self: center;
+    width: 100%;
+  }
+
+  .footer-menu {
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .footer-socials {
+    width: max-content;
+  }
+
+  .footer__buttons {
+    width: max-content;
   }
 }
 
@@ -758,5 +777,19 @@ body{
   }
   .about{
     padding: 0px !important;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .footer__buttons {
+    flex-direction: column;
+  }
+
+  .footer__buttons a {
+    text-align: center;
+  }
+
+  .footer-contacts {
+    gap: 32px;
   }
 }
