--- a/homeapp/templates/homeapp/index.html
+++ b/homeapp/templates/homeapp/index.html
@@ -807,7 +807,8 @@
             <li class="list-group-item">{{ partner.min_context3 }}</li>
             <li class="list-group-item">{{ partner.min_context4 }}</li>
           </ul>
-          <a class="btn1" href="">Получить консультацию</a>
+          <div style="flex: 1;"></div>
+          <a class="btn1 details__button" href="">Получить консультацию</a>
         </div>
       </div>
       {% endfor %}
