--- a/homeapp/templates/homeapp/team.html
+++ b/homeapp/templates/homeapp/team.html
@@ -4,31 +4,38 @@
 
 {% block content %}
 
-    <div class="container">
-        {% for partner in partners %}
-            {% if partner.id|divisibleby:2 %}
-                <div class="row mt-5 ">
-            <div class="col-lg-8 mt-4">
-                <h2>{{ partner.name }}</h2>
-                <p>{{ partner.context|linebreaksbr }}</p>
-            </div>
-            <div class="col-lg-4 order-first order-lg-last">
-                <img class="rounded w-100" src="{{ partner.photo.url }}" alt="{{ partner.name }}">
-            </div>
+<div class="container">
+    {% for partner in partners %}
+    {% if partner.id|divisibleby:2 %}
+    <div class="row mt-5 partner__card">
+        <div class="col-lg-8 mt-4">
+            <h2 class="partner__card-title">{{ partner.name }}</h2>
+            <p>{{ partner.context|linebreaksbr }}</p>
+            <button type="button" class="btn1 partner__card-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Получить консультацию
+            </button>
         </div>
-            {% else %}
-                <div class="row mt-5">
-            <div class="col-lg-4">
-                <img class="rounded w-100" src="{{ partner.photo.url }}" alt="{{ partner.name }}">
-            </div>
-            <div class="col-lg-8 mt-4">
-                <h2>{{ partner.name }}</h2>
-                <p>{{ partner.context|linebreaksbr }}</p>
-            </div>
+        <div class="col-lg-4 order-first order-lg-last">
+            <img class="w-100" src="{{ partner.photo.url }}" alt="{{ partner.name }}">
         </div>
-            {% endif %}
-        {% endfor %}
-
     </div>
+    {% else %}
+    <div class="row mt-5 partner__card">
+        <div class="col-lg-4">
+            <img class="w-100" src="{{ partner.photo.url }}" alt="{{ partner.name }}">
+        </div>
+        <div class="col-lg-8 mt-4">
+            <h2 class="partner__card-title">{{ partner.name }}</h2>
+            <p>{{ partner.context|linebreaksbr }}</p>
+            <button type="button" class="btn1 partner__card-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Получить консультацию
+            </button>
+        </div>
+        {# <a href="">Получить консультацию</a> #}
+    </div>
+    {% endif %}
+    {% endfor %}
+
+</div>
 
 {% endblock %}
