--- a/homeapp/templates/homeapp/cases_auto.html
+++ b/homeapp/templates/homeapp/cases_auto.html
@@ -4,24 +4,39 @@
 {% block content %}
 
 <div class="container">
-    <h1>Практика адвокатов нашей коллегии</h1>
-    <div class="row pt-4">
-        {% for category in practice_categories %}
-        <!-- Используем col-md-4 для 3 карточек в ряду и col-sm-6 для 2 карточек в ряду на маленьких экранах -->
-        <div class="col-sm-6 col-md-4 mb-4 d-flex align-items-stretch">
-            <a class="text-decoration-none w-100" href="{% url 'homeapp:practice_category_list' category_id=category.id %}">
-                <!-- Карточка занимает всю высоту родителя -->
-                <div class="card h-100 p-4 m-2">
-                    <!-- Изображение сверху карточки -->
-                    {% comment %} <img src="{% static 'homeapp/img/cases/1.jpg' %}" class="card-img-top" alt="..."> {% endcomment %}
-                    <div class="card-body">
-                        <!-- Текст выравнивается по верхнему краю -->
-                        <p class="card-text text-center h4">{{ category.title }}</p>
+    <div class="page-section">
+        <h1 class="page-section__title">Практика адвокатов нашей коллегии</h1>
+        <div class="row cases__row">
+            {% for category in practice_categories %}
+            <!-- Используем col-md-4 для 3 карточек в ряду и col-sm-6 для 2 карточек в ряду на маленьких экранах -->
+            <div class="col-sm-6 col-md-3 d-flex align-items-stretch  cases__item">
+                <a class="text-decoration-none w-100" href="{% url 'homeapp:practice_category_list' category_id=category.id %}">
+                    <!-- Карточка занимает всю высоту родителя -->
+                    <div class="card h-100 cases__card">
+                        <!-- Изображение сверху карточки -->
+                        {# Картинок пока не будет #}
+                        {# {% comment %} <img src="{% static 'homeapp/img/cases/1.jpg' %}" class="card-img-top" alt="..."> {% endcomment %} #}
+                        <div class="card-body cases__card-body">
+                            <!-- Текст выравнивается по верхнему краю -->
+                            <p class="card-text cases__item-text text-center h4">{{ category.title }}</p>
+                        </div>
                     </div>
-                </div>
-            </a>
+                </a>
+            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
+    </div>
+
+    <div class="send-request">
+        <div class="container">
+            <div class="send-request__inner">
+                <div class="send-request__content">
+                    <h2 class="send-request__title">Оставить заявку:</h2>
+                    {% include 'homeapp/forms/application_form.html' %}
+                </div>
+                <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
+            </div>
+        </div>
     </div>
 </div>
 
