--- a/homeapp/templates/homeapp/practice_category_list.html
+++ b/homeapp/templates/homeapp/practice_category_list.html
@@ -11,57 +11,62 @@
 
 
 <div class="container">
-    <h1 class="text-center h1">{{ category.title }}</h1>
-    <ul class="list-group list-group-flush">
-        {% for practice in practices %}
-        <li class="list-group-item m-2">
-            <a href="{% url 'homeapp:practice_detail' pk=practice.id %}" style="text-decoration: none; color: #000000;">
-                {{ practice.title }}
-            </a>
-        </li>
-        {% endfor %}
-    </ul>
+    <div class="page-section">
+        <h1 class="page-section__title">{{ category.title }}</h1>
+        <ul class="list-group list-group-flush service-list__items">
+            {% for practice in practices %}
+            <li class="service-list__item list-group-item practice-categories__item">
+                <a href="{% url 'homeapp:practice_detail' pk=practice.id %}" class="practice-categories__link">
+                    <span>
+                        {{ practice.title }}
+                    </span>
+                    <img src="{% static 'homeapp/img/arrow-right.png' %}" alt="" />
+                </a>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
 
     <!-- Пагинация -->
-    <nav aria-label="Page navigation">
+    <!-- <nav aria-label="Page navigation">
         <ul class="pagination pagination-sm justify-content-center">
             {% if practices.has_previous %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ practices.previous_page_number }}" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
+            <li class="page-item">
+                <a class="page-link" href="?page={{ practices.previous_page_number }}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
             {% else %}
-                <li class="page-item disabled">
-                    <span class="page-link" aria-hidden="true">&laquo;</span>
-                </li>
+            <li class="page-item disabled">
+                <span class="page-link" aria-hidden="true">&laquo;</span>
+            </li>
             {% endif %}
 
             {% for i in practices.paginator.page_range %}
-                {% if practices.number == i %}
-                    <li class="page-item active">
-                        <span class="page-link">{{ i }}</span>
-                    </li>
-                {% else %}
-                    <li class="page-item">
-                        <a class="page-link" href="?page={{ i }}">{{ i }}</a>
-                    </li>
-                {% endif %}
+            {% if practices.number == i %}
+            <li class="page-item active">
+                <span class="page-link">{{ i }}</span>
+            </li>
+            {% else %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+            </li>
+            {% endif %}
             {% endfor %}
 
             {% if practices.has_next %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ practices.next_page_number }}" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
+            <li class="page-item">
+                <a class="page-link" href="?page={{ practices.next_page_number }}" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
             {% else %}
-                <li class="page-item disabled">
-                    <span class="page-link" aria-hidden="true">&raquo;</span>
-                </li>
+            <li class="page-item disabled">
+                <span class="page-link" aria-hidden="true">&raquo;</span>
+            </li>
             {% endif %}
         </ul>
-    </nav>
+    </nav> -->
 </div>
 
 {% endblock content %}
