--- a/homeapp/templates/homeapp/practice_detail.html
+++ b/homeapp/templates/homeapp/practice_detail.html
@@ -5,37 +5,36 @@
 
 
 <div class="container">
-        <br/>
-    <h3>{{ practice.title }}</h3>
-    {% comment %} <p><strong>Место работы:</strong> {{ practice.get_work_place_display }}</p>
-    <p><strong>Категория:</strong> {{ practice.category.title }}</p> {% endcomment %}
-    <br/>
-    <p><strong>Обстоятельства:</strong> {{ practice.circumstances }}</p>
-    <p><strong>Позиция адвоката:</strong> {{ practice.lawyer_position }}</p>
-    <p><strong>Итог:</strong> {{ practice.outcome }}</p>
-    {% if practice.verdict_url %}
-    <p><strong>Вердикт:</strong> <a href="{{ practice.verdict_url }}">ссылка</a></p>
-    {% endif %}
-    
-    <br/>
+    <div class="page-section">
+        <h3 class="page-section__title">{{ practice.title }}</h3>
+        {% comment %} <p><strong>Место работы:</strong> {{ practice.get_work_place_display }}</p>
+        <p><strong>Категория:</strong> {{ practice.category.title }}</p> {% endcomment %}
+        <br />
+        <p><strong>Обстоятельства:</strong> {{ practice.circumstances }}</p>
+        <p><strong>Позиция адвоката:</strong> {{ practice.lawyer_position }}</p>
+        <p><strong>Итог:</strong> {{ practice.outcome }}</p>
+        {% if practice.verdict_url %}
+        <p><strong>Вердикт:</strong> <a href="{{ practice.verdict_url }}">ссылка</a></p>
+        {% endif %}
 
-    {% if practice.images.all %}
-    <div class="images">
-        <ul>
-            {% for image in practice.images.all %}
+        {% if practice.images.all %}
+        <div class="images">
+            <ul>
+                {% for image in practice.images.all %}
                 <li>
                     <a href="{{ image.image.url }}" target="_blank">
                         {% thumbnail image.image "150x150" crop="center" as thumb %}
-                            <img src="{{ thumb.url }}" alt="Изображение случая практики">
+                        <img src="{{ thumb.url }}" alt="Изображение случая практики">
                         {% endthumbnail %}
                     </a>
                 </li>
-            {% endfor %}
-        </ul>
-    </div>
-    {% endif %}
+                {% endfor %}
+            </ul>
+        </div>
+        {% endif %}
 
-    {% comment %} <a href="{% url 'practice_list' %}">Назад к списку практик</a> {% endcomment %}
+        {% comment %} <a href="{% url 'practice_list' %}">Назад к списку практик</a> {% endcomment %}
+    </div>
 </div>
 
-    {% endblock content %}
+{% endblock content %}
